--- a/5/三山木マジック/tempinfo/2024-10-30_00-52_editing_workflow.html
+++ b/5/三山木マジック/tempinfo/2024-10-30_00-52_editing_workflow.html
@@ -897,6 +897,7 @@ hue-6-2: #e6c07b
 ・タイムコードは削除してください。
 ・「あのー」「えっと」「まあ」「あのね」「えっと」「ま」「うん」「なんか」のようなフィラーも削除してください。
 ・口調は変えないでください。
+・なるべく省略しないでください
 </code></pre>
 
             
