好きになる力

--- a/30000/2024-11-04.html
+++ b/30000/2024-11-04.html
@@ -889,10 +889,98 @@ hue-6-2: #e6c07b
         </head>
         <body class="vscode-body vscode-light">
             <h1 id="20241104-のメモ">2024/11/04 のメモ</h1>
-<h2 id="好きになる力">好きになる力</h2>
-<p><a href="https://youtu.be/AeVm9-oVXXo?si=5euB66z4uwoGehYD">「これからの時代に必要なスキルは、“好きになる力”です」前田裕二が迷わず即答した理由とは</a>
-知識や技術、努力はドレスコード。差別化できることがあるとしたら、人間力。</p>
-<p>好きになってもらう力というのではなく、好きになる力というのがいい。</p>
+<h2 id="これからの時代に必要なスキルは好きになる力です前田裕二が迷わず即答した理由とは"><a href="https://youtu.be/AeVm9-oVXXo?si=5euB66z4uwoGehYD">「これからの時代に必要なスキルは、“好きになる力”です」前田裕二が迷わず即答した理由とは</a></h2>
+<ul>
+<li>★ 知識や技術、努力はドレスコード。差別化できることがあるとしたら、人間力。</li>
+<li>好きになってもらう力というのではなく、好きになる力というのがいい。
+<ul>
+<li>好きになるのは自分の問題で再現性がある。好きになってもらうは、科学できない。芸術より。</li>
+</ul>
+</li>
+<li>観察から好きになっていく。</li>
+<li>大喜利とは、大きく喜ばせて、自分も利を得る。</li>
+<li>好きになるとは、時間を使うこと。</li>
+<li>0.（まるぜろ）として、自分がご機嫌で、自分に自身がある状態でないと人を好きになれない。
+<ul>
+<li>人のことをディスっている人は、不機嫌な人</li>
+</ul>
+</li>
+<li>いい人を見つけるプロ。
+<ul>
+<li>この人のここはもしかしたら、めっちゃすごいことになるかもよ？は見つけるのは得意。</li>
+</ul>
+</li>
+</ul>
+<h2 id="そんなに頑張って人を好きになる必要あります好きになる力について前田裕二さんに質問攻め"><a href="https://youtu.be/UP4o6BpinCM?si=Ehq7TF1wueq0LOXK">「そんなに頑張って人を好きになる必要、あります？」“好きになる力”について前田裕二さんに質問攻め</a></h2>
+<ul>
+<li>自分が相手のことを好きになって、相手に好かれると、自分にめっちゃ注文くれる、そうすと本気で勉強する。</li>
+<li>この野郎からが勝負
+<ul>
+<li>関係値が遠いい人や、嫌いな人を好きになる訓練</li>
+</ul>
+</li>
+<li>好きになるスキルは、テクニックなスキル</li>
+<li>本音ではないことを言わない。
+<ul>
+<li>嘘を言ったら、大喜利選手権は負け。</li>
+</ul>
+</li>
+<li>伝え方のスキル
+<ul>
+<li>具体 階層を一つ下げる。
+<ul>
+<li>「その黒い服いいですね」より、「その黒い服のテクスチャいいですね」</li>
+</ul>
+</li>
+<li>自分のエピソードをくっつける。
+<ul>
+<li>僕もめちゃくちゃテクスチャにこだわって服を買っているんです。これも、そのとき在庫なくて、取り寄せたんです。</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>好きと伝えると、チーム全体の力が上がる。</li>
+<li>AI で効率化が進んだら、人と働く意味は楽しいからになる。
+<ul>
+<li>そうなった世界で、あなたは選ばれる側ですか？</li>
+<li>選ぶ側でもあるけれど、選ばれる側でもある。</li>
+</ul>
+</li>
+<li>SNS は顕著で、ロジックとロジックをぶつけ合っているように見えて、みんな「この人は、自分の敵か、味方か」しか見ていない。
+<ul>
+<li>ロジックなんて後付。</li>
+<li>味方してくれていたら、むしろ味方してくれている人のロジックがズレていても、なんとか味方してくれる。</li>
+<li>「あなたことを否定しているわけではないんですけど」とロジカルに言っても、受ける印象として「どう考えても敵対視している」と思ったら、受け入れられない。</li>
+</ul>
+</li>
+<li>そういう好き嫌いで分断される世の中になると、とにかく好きって飛びつく人のほうが相対的にチャンスが高まる。
+<ul>
+<li>運気が上る。</li>
+<li>人のことを嫌いとすぐに攻撃する人は、チャンスを失う可能性が高い。</li>
+<li>感謝と謙虚と毎日言ってたら、勝手に思い込むこともある。</li>
+</ul>
+</li>
+<li>恋愛で、A と B でお互いに嫌っている関係があったときに、A にも B にも上手に言ってたら、なんか信用できない人と言われるリスクがある。
+<ul>
+<li>組織のリーダーのマネジメントは、それに近い。</li>
+<li>フェアでフラットで平等である必要があるから。</li>
+</ul>
+</li>
+<li>嫌いなところを見つけるのも大事
+<ul>
+<li>はっきり言わないと、好きなポイントが映ないから。</li>
+<li>嫌いなところは、はっきりいう。</li>
+<li>ただ、深く仕事をしている人や深い関係値の人に対しては。</li>
+<li>浅い人にそれはだめ。</li>
+</ul>
+</li>
+<li>好きのベースがあってこそ、相手も受け入れれる。
+<ul>
+<li>好きがあると、指摘しやすくなるというのもある。</li>
+</ul>
+</li>
+<li>それだけの観察力があると、周りの人もどう思われているのかを知りたくなる。</li>
+</ul>
 
             
             <script async type="text/javascript">
