--- a/30000/2024-11-04.html
+++ b/30000/2024-11-04.html
@@ -981,6 +981,30 @@ hue-6-2: #e6c07b
 </li>
 <li>それだけの観察力があると、周りの人もどう思われているのかを知りたくなる。</li>
 </ul>
+<h2 id="元マッキンゼーのエースが語る企業の選び方南場智子--波頭亮"><a href="https://youtu.be/Nh_rzdVh15U?si=2M5z6lsEinpSFFgG">元マッキンゼーのエースが語る企業の選び方【南場智子 × 波頭亮】</a></h2>
+<ul>
+<li>正しいことを導き出して、それを伝えるのがコンサル</li>
+<li>実業は、それを実際にやらないといけない。やって成果を出さないといけない。
+<ul>
+<li>濁流の先に肥沃な土地がある。だから、渡ったほうがいいですよと。</li>
+<li>ちょっと親切なコンサルだと、こうやったら渡れますよと教えてくれる。</li>
+<li>実業家はその怖そうな濁流に一番先に足を突っ込んで、渡りきらないといけない。</li>
+<li>そのときに一人だけ渡りきっててもしゃーない。みんながついてこないと、行った先で一人で耕すことになる。</li>
+<li>実際に足を突っ込んだら、誰も教えてくれなかったことがおきる。</li>
+<li>Doer になって初めてわかることは多い。
+<ul>
+<li>ワニがでたり、川だと思ったら底抜けだったとか</li>
+</ul>
+</li>
+<li>瞬時に、何が正しいのか戦略を立て直しながら「大丈夫だよ、怖くないよ、行けるよ」という背中を見せながら渡らないと誰もついてこない。</li>
+<li>胆力が大事。
+<ul>
+<li>★ アドバイスするとは次元が違う胆力が必要。</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
 
             
             <script async type="text/javascript">
