文字起こしの誤字脱字修正

--- a/5/三山木マジック/tempinfo/2024-10-30_00-52_editing_workflow.html
+++ b/5/三山木マジック/tempinfo/2024-10-30_00-52_editing_workflow.html
@@ -899,6 +899,12 @@ hue-6-2: #e6c07b
 ・口調は変えないでください。
 ・なるべく省略しないでください
 </code></pre>
+<pre><code class="language-text">・話し言葉のまま誤字脱字を修正してください。
+・文脈に関係なく、改行位置は添付したファイル通りにしてください。
+・漢数字はすべて半角英数字にしてください。
+・タイムコードはすべて削除してください。
+・文章に句読点は入れないでください。
+</code></pre>
 
             
             <script async type="text/javascript">
