改善点も一つのファイルで管理 長くなるものだけ、新しいファイルを作ろうかな。

--- a/5/三山木マジック/improvement/2024-10-31_01-39_New_Note.html
+++ b/5/三山木マジック/improvement/2024-10-31_01-39_New_Note.html
@@ -2,7 +2,7 @@
         <html>
         <head>
             <meta charset="UTF-8">
-            <title>2024&sol;10&sol;31 &#x300e;&#x300c;&#x3053;&#x308c;&#x3067;&#x304a;&#x524d;&#x3082;&#x4ffa;&#x306e;&#x5973;&#x3060;&#x306a;&#x300d;&#x306e;&#x4ef6;&#x306b;&#x3064;&#x3044;&#x3066;&#x300f;&#x306e;&#x6539;&#x5584;&#x70b9;</title>
+            <title>&#x6539;&#x5584;&#x70b9;</title>
             <style>
 /* From extension vscode.github */
 /*---------------------------------------------------------------------------------------------
@@ -888,10 +888,14 @@ hue-6-2: #e6c07b
         
         </head>
         <body class="vscode-body vscode-light">
-            <h1 id="20241031-これでお前も俺の女だなの件についての改善点">2024/10/31 『「これでお前も俺の女だな」の件について』の改善点</h1>
-<h2 id="改善点">改善点</h2>
+            <h1 id="改善点">改善点</h1>
 <ul>
 <li>文字起こしの校閲は、次からなるべく省略しないで、改行位置も合わせた出力がでるまで何回か試す。</li>
+<li>改行はいらないかも
+<ul>
+<li>細切れで話がよくわからないよりも、内容がわかる字幕のほうが良さそう。</li>
+</ul>
+</li>
 </ul>
 
             
