フォルダ構成変更と、字幕校閲指示更新

--- a/5/三山木マジック/edit/2024-10-30_00-52_editing_workflow.html
+++ b/5/三山木マジック/edit/2024-10-30_00-52_editing_workflow.html
@@ -933,6 +933,15 @@ hue-6-2: #e6c07b
 ・文章に句読点は入れないでください。
 ・「あのー」「えっと」「まあ」「あのね」「えっと」「ま」「うん」「なんか」のようなフィラーも削除してください。
 </code></pre>
+<pre><code class="language-text">・誤字脱字をすべて修正してください。
+・校閲を行ってください。
+・漢数字はすべて半角英数字にしてください。
+・タイムコードは削除してください。
+・「あのー」「えっと」「まあ」「あのね」「えっと」「ま」「うん」「なんか」のようなフィラーも削除してください。
+・口調は変えないでください。
+・なるべく省略しないでください
+</code></pre>
+<p>→ 改行位置も直してもらったほうが文章としてわかりやすいかもしれない。そもそも自分で改行の位置を指定してこだわりがあるわけではないのだから。</p>
 
             
             <script async type="text/javascript">
