--- a/5/ChatGPTへの指示/YouTube編集.html
+++ b/5/ChatGPTへの指示/YouTube編集.html
@@ -2,7 +2,7 @@
         <html>
         <head>
             <meta charset="UTF-8">
-            <title>&#x6982;&#x8981;&#x6b04;</title>
+            <title>YouTube &#x7de8;&#x96c6;&#x306e;&#x3068;&#x304d;&#x306b;&#x4f7f;&#x3046; ChatGPT &#x3078;&#x306e;&#x6307;&#x793a;</title>
             <style>
 /* From extension vscode.github */
 /*---------------------------------------------------------------------------------------------
@@ -888,28 +888,15 @@ hue-6-2: #e6c07b
         
         </head>
         <body class="vscode-body vscode-light">
-            <h1 id="概要欄">概要欄</h1>
-<pre><code class="language-text">モテ男製造工場で工場長を務めております三山木です。
-現代のねじれた恋愛市場を良くするには男のレベルの底上げが必要なんだ。本当の意味でのモテるマインドセットを俺が教えるからついてこい！
-</code></pre>
-<pre><code class="language-text">こんにちは！この今回は、エンジニアが「恋愛」について語ります。日常の恋愛エピソードや、人間関係の深掘り、ちょっとしたテクノロジーの視点から恋愛を考察したり、たまには笑いも交えたトークをお届けします。
-
-エンジニアらしい論理的な視点と、ちょっと不器用だけど真剣な恋愛観で、皆さんの恋愛に役立つ情報や共感できる話題をお届け！恋愛の悩みや面白さを一緒に共有しましょう。
-
-📌配信内容
-- 恋愛の心理や戦略
-- 日常の恋愛トラブル解決法
-- エンジニアならではの独特な恋愛視点
-
-💬コメント大歓迎！
-恋愛相談や話してほしいテーマがあれば、ぜひコメント欄で教えてください！
-チャンネル登録＆高評価もよろしくお願いします！😊
-
-エンジニアとしての知識と恋愛の経験を活かして、楽しく学べる動画をお届けします！
-ぜひ一緒に恋愛について考え、楽しみましょう！
-</code></pre>
-<p>クレジット記載メモ</p>
-<pre><code class="language-text">VOICEVOX:四国めたん
+            <h1 id="youtube-編集のときに使う-chatgpt-への指示">YouTube 編集のときに使う ChatGPT への指示</h1>
+<p>文字起こし</p>
+<pre><code class="language-text">・誤字脱字をすべて修正してください。
+・校閲を行ってください。
+・漢数字はすべて半角英数字にしてください。
+・タイムコードは削除してください。
+・「あのー」「えっと」「まあ」「あのね」「えっと」「ま」「うん」「なんか」のようなフィラーも削除してください。
+・口調は変えないでください。
+・なるべく省略しないでください
 </code></pre>
 
             
