銀魂から学ぶ恋愛の記事下書き

--- a/5/三山木マジック/slide/銀魂きめえ.html
+++ b/5/三山木マジック/slide/銀魂きめえ.html
@@ -2,7 +2,7 @@
         <html>
         <head>
             <meta charset="UTF-8">
-            <title>YouTube &#x7de8;&#x96c6;&#x306e;&#x3068;&#x304d;&#x306b;&#x4f7f;&#x3046; ChatGPT &#x3078;&#x306e;&#x6307;&#x793a;</title>
+            <title>2 &#x5143;&#x30aa;&#x30bf;&#x30af;&#x306f;&#x304d;&#x3081;&#x3048;&#x306e;&#x304b;&#xff1f;</title>
             <style>
 /* From extension vscode.github */
 /*---------------------------------------------------------------------------------------------
@@ -888,28 +888,83 @@ hue-6-2: #e6c07b
         
         </head>
         <body class="vscode-body vscode-light">
-            <h1 id="youtube-編集のときに使う-chatgpt-への指示">YouTube 編集のときに使う ChatGPT への指示</h1>
-<p>文字起こし</p>
-<pre><code class="language-text">・誤字脱字をすべて修正してください。
-・校閲を行ってください。
-・漢数字はすべて半角英数字にしてください。
-・タイムコードは削除してください。
-・「あのー」「えっと」「まあ」「あのね」「えっと」「ま」「うん」「なんか」のようなフィラーも削除してください。
-・口調は変えないでください。
-・なるべく省略しないでください
-</code></pre>
-<pre><code class="language-text">・誤字脱字をすべて修正してください。
-・校閲を行ってください。
-・要約しすぎないでください。
-・漢数字はすべて半角英数字にしてください。
-・タイムコードは削除してください。
-・「あのー」「えっと」「まあ」「あのね」「えっと」「ま」「うん」「なんか」のようなフィラーも削除してください。
-・口調は変えないでください。
-・なるべく省略しないでください
-</code></pre>
-<pre><code class="language-text">・誤字脱字をすべて修正してください。
-・タイムコードは削除してください。
+            <h1 id="2-元オタクはきめえのか">2 元オタクはきめえのか？</h1>
+<pre><code class="language-text">〈質問〉
 
+私は前期試験で「憧れている人」か「尊敬している人」をきかれたら、「銀魂というマンガの主人公、坂田銀時です！」と答えようとしていました。聞かれませんでしたが。これってアリだと思いますか？　「二次元オタクきめぇ ww」って思われますかね？　そもそも二次元オタクってきもいですか？
+
+〈答え〉
+
+君がやろうとしていた事は　たとえるなら
+
+「おにぎりの具で何が好き？」「具志堅用高」って
+
+答えるようなもんです。きめぇでしょ。
+
+自分が具志堅の話をしたいばかりに　人の話をきいていない
+
+会話が成立していないんです。オタクがきめぇんじゃない
+
+コミュニケーション下手なオタクは自己が肥大化して
+
+他人の話をきくより　自分が何を話すかばかり考える人が多い
+
+そして会話に不具合が起こる。それがきめぇんです。
+
+面接はいかに自己表現できるか試す場でもありますが　あくまで
+
+会話の中でです。まずは面接官の話をちゃんとききましょう
+
+「君が好きなアフロの具は？」「具志堅用高」なら解りますよ
+
+でも面接官は「おにぎりの具」をきいているワケでしょ
+
+「二次元の尊敬している人」ではなく「現実で尊敬している人」を
+
+質問してきてるワケでしょ　じゃあ君が答えるべきは一つでしょ
+
+具志堅用高　です。
+
+</code></pre>
+<p>自分の話したいことを話すのではなく、人の話を聞く。</p>
+<p>話す能力よりも、ヒアリング能力</p>
+<pre><code class="language-text">〈質問〉
+
+私は前期試験で「憧れている人」か「尊敬している人」をきかれたら、「銀魂というマンガの主人公、坂田銀時です！」と答えようとしていました。聞かれませんでしたが。これってアリだと思いますか？　「二次元オタクきめぇww」って思われますかね？　そもそも二次元オタクってきもいですか？
+
+
+
+〈答え〉
+
+君がやろうとしていた事は　たとえるなら
+
+「おにぎりの具で何が好き？」「具志堅用高」って
+
+答えるようなもんです。きめぇでしょ。
+
+自分が具志堅の話をしたいばかりに　人の話をきいていない
+
+会話が成立していないんです。オタクがきめぇんじゃない
+
+コミュニケーション下手なオタクは自己が肥大化して
+
+他人の話をきくより　自分が何を話すかばかり考える人が多い
+
+そして会話に不具合が起こる。それがきめぇんです。
+
+面接はいかに自己表現できるか試す場でもありますが　あくまで
+
+会話の中でです。まずは面接官の話をちゃんとききましょう
+
+「君が好きなアフロの具は？」「具志堅用高」なら解りますよ
+
+でも面接官は「おにぎりの具」をきいているワケでしょ
+
+「二次元の尊敬している人」ではなく「現実で尊敬している人」を
+
+質問してきてるワケでしょ　じゃあ君が答えるべきは一つでしょ
+
+具志堅用高　です。
 </code></pre>
 
             
