--- a/5/ChatGPTへの指示/YouTube編集.html
+++ b/5/ChatGPTへの指示/YouTube編集.html
@@ -911,6 +911,26 @@ hue-6-2: #e6c07b
 ・タイムコードは削除してください。
 
 </code></pre>
+<pre><code class="language-text">・誤字脱字をすべて修正してください。
+・タイムコードは削除してください。
+・文脈に関係なく、改行位置は添付したファイル通りにしてください。
+</code></pre>
+<pre><code class="language-text">・誤字脱字をすべて修正してください。
+・文脈に関係なく、改行位置は添付したファイル通りにしてください。
+・漢数字はすべて半角英数字にしてください。
+・タイムコードは削除してください。
+</code></pre>
+<pre><code class="language-text">・話し言葉のまま誤字脱字を修正してください。
+・文脈に関係なく、改行位置は添付したファイル通りにしてください。
+・漢数字はすべて半角英数字にしてください。
+・タイムコードはすべて削除してください。
+・文章に句読点は入れないでください。
+</code></pre>
+<pre><code class="language-text">・話し言葉のまま誤字脱字をすべて修正してください。
+・文脈に関係なく、改行位置は添付したファイル通りにしてください。
+・漢数字はすべて半角英数字にしてください。
+・タイムコードは削除してください。
+</code></pre>
 
             
             <script async type="text/javascript">
