--- a/5/三山木マジック/edit/概要欄2024-11-17.html
+++ b/5/三山木マジック/edit/概要欄2024-11-17.html
@@ -911,6 +911,16 @@ hue-6-2: #e6c07b
 <p>クレジット記載メモ</p>
 <pre><code class="language-text">VOICEVOX:四国めたん
 </code></pre>
+<pre><code class="language-text">こんにちは！モテ男製造工場の工場長、三山木（みやまぎ）です。
+現代の恋愛市場は、正直言ってちょっとねじれてるよな…。
+でも、俺は信じてるんだ。恋愛をもっと楽しく、素晴らしいものにするためには、男たちの「本当の魅力」を引き出すことが必要だって！
+
+ここでは、ただの「表面的なモテ」じゃなくて、本物のモテるマインドセットをみんなに教えていく。
+これを知れば、恋愛だけじゃなく、人生そのものが変わるはずだ。
+
+自信をつけたい人、恋愛で悩んでいる人、まずは俺の動画をチェックしてくれ。
+さあ、俺についてこい！
+</code></pre>
 
             
             <script async type="text/javascript">
